# aqa_python

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: github-actions.yml
pages/: base_page.py  cart_page.py  main_page.py  product_page.py  search_page.py
tests/: accept_popup_test.py  cart_page_test.py  conftest.py  main_page_test.py
utils/: helpers.py
