[tool.poetry]
name = "playwright-tests"
version = "0.1.0"
description = "Automated Playwright tests"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.9"
pytest = "7.4.0"
playwright = "1.52.0"
pytest-playwright = "0.7.0"
requests = "2.32.4"
allure-pytest = "2.13.2"

[tool.poetry.group.dev.dependencies]
flake8 = "7.2.0"
black = "25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__"
]

[tool.isort]
profile = "black"
line_length = 88
