[project]
name = "aqa-python"
version = "0.1.0"
description = "Automated QA tests with Playwright"
requires-python = ">=3.9"
dependencies = [
    "pytest==7.4.0",
    "playwright==1.52.0",
    "pytest-playwright==0.7.0",
    "requests==2.32.4",
    "allure-pytest==2.13.2"
]

[project.optional-dependencies]
dev = [
    "flake8==7.2.0",
    "black==25.1.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.flake8]
max-line-length = 88
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__"
]

[tool.isort]
profile = "black"
line_length = 88
